--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.4.0",
     "sass": "^1.54.8",
+    "swr": "^1.3.0",
     "typescript": "^4.8.2",
     "web-vitals": "^2.1.4"
   },
